WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
147006
REGRESSION(
r186464
): [SOUP] ASSERTION FAILED: !m_messageReceiverMapCount when closing any tab
https://bugs.webkit.org/show_bug.cgi?id=147006
Summary
REGRESSION(r186464): [SOUP] ASSERTION FAILED: !m_messageReceiverMapCount when...
Michael Catanzaro
Reported
2015-07-16 10:59:34 PDT
Created
attachment 256914
[details]
backtrace With my debug build of
r186861
Epiphany crashes 100% when closing any browser tab (or the window): ASSERTION FAILED: !m_messageReceiverMapCount ../../Source/WebKit2/Platform/IPC/MessageReceiver.h(41) : virtual IPC::MessageReceiver::~MessageReceiver() Backtrace attached.
Attachments
backtrace
(51.36 KB, text/plain)
2015-07-16 10:59 PDT
,
Michael Catanzaro
no flags
Details
Patch
(1.70 KB, patch)
2015-07-16 11:22 PDT
,
Michael Catanzaro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2015-07-16 11:22:39 PDT
Created
attachment 256915
[details]
Patch
WebKit Commit Bot
Comment 2
2015-07-16 13:07:57 PDT
Comment on
attachment 256915
[details]
Patch Clearing flags on attachment: 256915 Committed
r186904
: <
http://trac.webkit.org/changeset/186904
>
WebKit Commit Bot
Comment 3
2015-07-16 13:08:01 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug