REGRESSION(r186464): [SOUP] ASSERTION FAILED: !m_messageReceiverMapCount when closing any tab https://bugs.webkit.org/show_bug.cgi?id=147006

Reviewed by Anders Carlsson.

Remove the message receiver before it is deallocated.

* UIProcess/Network/CustomProtocols/soup/CustomProtocolManagerProxySoup.cpp:
(WebKit::CustomProtocolManagerProxy::~CustomProtocolManagerProxy):


Canonical link: https://commits.webkit.org/165068@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@186904 268f45cc-cd09-0410-ab3c-d52691b4dbfc